app/styles/app.scss
@import 'bower_components/bootstrap-sass-official/assets/stylesheets/_bootstrap';
@import 'bower_components/fontawesome/scss/font-awesome';

/* GENERAL */

html, body {
  margin: 0px;
  line-height: 1.5;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}

h1 {
  font-size: 2.8em;
}

h2 {
  font-size: 2.5em;
}

.grey {
  color: #999;
}

.grey-background {
  background-color: #eee;
}

.no-padding {
  padding: 0 !important;
}

.no-margin {
  margin: 0 !important;
}

.no-margin-top {
  margin-top: 0 !important;
}

.margin-left-10 {
  margin-left: 10px;
}

.margin-left-15 {
  margin-left: 15px;
}

.margin-left-20 {
  margin-left: 20px;
}

.margin-bottom-10 {
  margin-bottom: 10px;
}

.margin-top-10 {
  margin-top: 10px;
}

.margin-top-20 {
  margin-top: 20px;
}

.fixed-nav {
  position: fixed;
  width: 100%;
  z-index: 2;
  padding: 0;
}

/* HEADER */

.navbar {
  border-radius: 0px;
  margin-bottom: 0;
  width: 100%;
}

#main-nav-dropdown {
  z-index: 3;
}

#main-content {
  margin-top: 70;
}

.center {
  text-align: center;
}

/*SEARCH FORM */

#search-navbar {
  height: 0px;

  button {
    margin-right: 15px;
  }
}
.navbar-default {
  height: 700;
}

#mobile-search-title {
  color: #000;
  text-align: center;
  margin-top: 80px;
}

#mobile-search-form {
  background-color: rgba(124, 119, 133, 0.5);
  border: 2px solid #999;
  border-radius: 1px;
  box-shadow: 0px 0px 10px #000000;
  opacity: 1 !important;
  box-sizing: border-box;
  display: block;
  font-family: 'Montserrat', 'Arial', sans-serif;
  font-size: 1em;
  color: #000;
  padding: 10px 30px;
  margin-top: 30px;
}

#search-navbar-collapse {

  .navbar-form {
    padding: 0;
    margin-top: 7px;
    margin-bottom: 0px;
  }
}
.search-field {
  margin-right: 35px;
}

#search-email {
  margin-right: 10px;
}

#calendar-icon {
  margin-right: 35px;
  font-size: 1.3em;
}

/* SEARCH RESULTS */

.restaurant-search-pic {
  height: auto;
  width: 100%;
}

.percent-discount {
  color: red;
}

.reserve-button {
  margin-top: 25px;
  margin-right: 30px;
}
#more-restaurants-title {
  text-align: center;
  color: #999;
  margin-top: 50px;
  margin-bottom: 30px;
}

/* CONTACT PAGE */

#contact-form {
  z-index: 2;
}

#contact-black {
  background-color: #181818;
  width: 100%;
  z-index: 1;
  height: 670px;
  position: relative;
}

#contact-img {
  opacity: 0.03;
  position: absolute;
  top: 0;
  vertical-align: middle;
  box-sizing: border-box;
  height: 670px;
}

#contact-title {
  text-align: center;
  text-transform: uppercase;
  padding-top: 100px;
  font-family: 'Montserrat', 'Arial', sans-serif;
}

#contact-section {
  margin-top: 20px;
}

.contact-detail {
  margin-bottom: 10px;
  font-size: 1.1em;
}

.contact-icon {
  margin-right: 5px;
  margin-left: 15px;
  display: inline;
  padding-top: 20px;
}

.contact-small-field {
  width: 100% !important;
}

#contact-big-field {
  width: 100%;
  margin-top: 20px;
}

#contact-name {
  width: 95% !important;
}

.contact-button {
  margin-top: 20px;
}

#contact-email-text {
  color: #999;
  margin-top: 30px;
  font-size: 1.3em;
  margin-left: 10px;
}

/* LANDING PAGE */

#main-title {
  text-align: center;
  color: white;
  margin-top: 150px;
  font-size: 2.6em;
}

.landing-image {
  background-image: url("/assets/images/main_pic.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top;
  height: 750px;
}

img.navbar-brand {
  height: 60px;
  margin: 0;
  padding: 5px 0 5px 10px;
}

#comment-ca-marche {
  height: 670px;
}

#landing-middle-header {
  margin-top: 30px;
  margin-bottom: 50px;
  color: #000;
  text-transform: uppercase;
}

#pre-subscribe-form-title {
  text-align: center;
  color: #fff;
}

#pre-subscribe-form {
  background-color: rgba(124, 119, 133, 0.3);
  border: 2px solid #999;
  border-radius: 1px;
  box-shadow: 0px 0px 10px #000000;
  opacity: 1 !important;
  box-sizing: border-box;
  display: block;
  margin-top: 0em;
  font-family: 'Montserrat', 'Arial', sans-serif;
  font-size: 1em;
  color: #000;
}

.pre-subscribe-form-field {
  border: 2px solid rgba(191, 191, 191, 0.3);
  background-color: rgba(0, 0, 0, 0.2);
  margin-top: 5px;
  margin-bottom: 10px;
  margin-right: 10px;
  min-height: 30px;
  padding: 10px 5px;
  border-radius: 1px;
  width: 100px;
  color: white;
}

#pre-subscribe-form-email-field {
  width: 200px;
}

#pre-subscribe-form-button {
  background-color: #CB154E;
  color: #fff;
  border-color: #CB154E;
  border: none;
  border-radius: 1px;
  &:hover {
    text-decoration: none;
  }
  padding: 10px 25px;
  border: 3px solid transparent;
  text-transform: uppercase;
}

#step_one_pic {
  height: 310px;
}

.full-width {
  width: 100%;
}

#register-form {
  margin-top: 10px;
}

.btn-black {
  background-color: #333;
  color: white;
}

/* LOGIN PAGE */
#login-page, #register-page {
  padding-top: 75px;
}

#remember-me {
  padding-top: 15px;
  margin-bottom: 0;

  label {
    margin-left: 10px;
  }
}

/* USER PAGES */
/* GENERAL */
#profile-title {
  margin-top: 0;
}

.balance {
  font-size: 2em;
  color: red;
  font-weight: bold;
  margin-left: 10px;
}

/* END OF USER PAGES */

/* RESTAURANT PAGES */

#restaurant-image {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top;
  height: 300px;
}

/* END OF RESTAURANT PAGES */

/* FOOTER */

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  background-color: #f5f5f5;
}

#home-page-footer {
  margin-top: 30px;
  color: #fff;
  display: block;
  box-sizing: border-box;
  font-family: 'Montserrat', 'Arial', sans-serif;
  overflow: hidden;
  height: 670px;
}

/* sticky cookie footer */
.cookie{
  height: 93px;
  width: 100%;
  position: fixed;
  top: 100%;
  margin-top: -93px;
  z-index: 3;
  border-radius: 0;
}

#ember472 > div.cookie.alert.alert-warning.full-width > div > div:nth-child(3) > button {
  background: none;
  border: none;
}


/* MEDIA QUERIES */

/* CONTACT PAGE */

@media (max-width: 1241px) {
  #comment-ca-marche {
    height: 600px;
  }
  #pre-subscribe-form-button {
    width: 100%;
    margin-bottom: 6px;
  }
  #pre-subscribe-form {
    margin-top: 40px;
  }
  .pre-subscribe-form-field {
    display: block;
    width: 100%;
    font-weight: bold;
  }
  #pre-subscribe-form-email-field {
    width: 100%;
  }
}

@media (max-width: 991px) {
  #comment-ca-marche {
    height: 2500px;
  }
  #contact-name {
    width: 100% !important;
    margin-bottom: 25px;
    margin-top: 40px;
  }
  .contact-detail {
    text-align: center;
  }
  #contact-black {
    height: 800px;
  }
  #contact-img {
    height: 800px !important;
  }
  #contact-email-text {
    margin-top: 10px;
  }
  .restaurant-img-container {
    width: 70%;
    height: 70%;
    overflow: hidden; 
    margin: 0 auto;
  }
  .footer {
    height: 100px;
  }
  .footer-text {
    text-align: center;
  }
}

@media (max-width: 800px) {
  #comment-ca-marche {
    height: 2500px;
  }
  #pre-subscribe-form {
    margin-top: 40px;
  }
  .pre-subscribe-form-field {
    display: block;
    width: 100%;
    font-weight: bold;
  }
  #pre-subscribe-form-email-field {
    width: 100%;
  }
  .contact-small-field {
    display: block;
    width: 100%;
  }
}

@media (max-width: 730px) {
  #comment-ca-marche {
    height: 2200px;
  }
}

@media (max-width: 600px) {
  #comment-ca-marche {
    height: 1800px;
  }

  .landing-image {
    height: 650px;
  }

  .restaurant-img-container {
    width: 100%;
    height: 100%;
    overflow: hidden; 
    margin: 0 auto;
  }

}

@media (max-width: 500px) {
  #comment-ca-marche {
    height: 1550px;
  }
}

@media (max-width: 400px) {
  #comment-ca-marche {
    height: 1300px;
  }
}

